<resources>
    <string name="app_name">Practical3</string>
    <string name="name">Name</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="year_range">1-3</string>
    <string name="sponsorship">Sponsorship</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="gender">Gender</string>
    <string name="program">Program</string>
    <string name="year">Year</string>
    <string name="close">Close</string>
    <string name="fee">Fee</string>
    <string name="result">Result</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_year">Invalid year</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>